@@ -43,7 +43,7 @@
     (method-combination-documentation x))
   (:method ((x symbol) (doc-type (eql 'method-combination)))
     (declare (ignore doc-type))
-    (method-combination-documentation (find-method-combination x)))
+    (method-combination-documentation (get-method-combination x 'documentation)))
   (:method ((x standard-method) (doc-type (eql 't)))
     (declare (ignore doc-type))
     (getf (gethash x sys::*documentation*) 'standard-method))
@@ -125,7 +125,7 @@
     (setf (method-combination-documentation x) new-value))
   (:method (new-value (x symbol) (doc-type (eql 'method-combination)))
     (declare (ignore doc-type))
-    (setf (method-combination-documentation (find-method-combination x))
+    (setf (method-combination-documentation (get-method-combination x '(setf documentation)))
           new-value))
   (:method (new-value (x standard-method) (doc-type (eql 't)))
     (declare (ignore doc-type))
